# tsfx

./: .gitignore  .pre-commit-config.yaml  .tsfx-config.toml  .tsfx.toml  Cargo.toml  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  tsfx.pyi
.github/workflows/: CI.yml
benches/: bench_main.rs
benches/benchmarks/: extract_comprehensive.rs  extract_comprehensive_with_time.rs  extract_efficient.rs  extract_efficient_with_time.rs  extract_minimal.rs  extract_minimal_with_time.rs  mod.rs
examples/: extract_from_file.py  extract_simple.py  extract_simple_with_time.py  knn.ipynb  vector_search.ipynb
paper/: paper.bib  paper.md
paper/jats/: paper.jats
python/tsfx/: __init__.py  _tsfx.py  tsfx.pyi
python_benchmarks/: efficient.json  efficient_bench.py  minimal_bench.py
python_benchmarks/1brc/: README.md  benchmark.py  generate_data.py
python_tests/: test_config.py  test_extract.py  test_extract_from_file.py  test_features.py
src/: error.rs  extract.rs  lib.rs  load.rs  main.rs
src/feature_extractors/: extractors.rs  extras.rs  high_comp_cost.rs  minimal.rs  mod.rs
src/utils/: mod.rs  toml_reader.rs
tests/: config.rs
tests/data/: .tsfx-config-test.toml
