[package]
name = "tsfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsfx"
crate-type = ["lib", "cdylib"]

[lints.rust]
# unused = "allow" # For exploratory dev.

[dependencies]
serde = { version = "*", features = ["derive"] }
toml = "*"
pyo3 = "*"
chrono = "*"
csv = "*"
ndarray = "=0.15.6"
ndarray-stats = "*"
polars = { version = "=0.41.3", features = [
  "polars-io",
  "lazy",
  "csv",
  "diff",
  "dynamic_group_by",
  "strings",
  "ndarray",
  "streaming",
  "dtype-struct",
  "nightly",
  "regex",
] }
pyo3-polars = { version = "=0.15.0", features = ["lazy"] }
linfa = "*"
linfa-linear = "*"
noisy_float = "*"
itertools = "*"
ordered-float = "*"
num = "*"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/html/docs-header.html"]

[[bench]]
name = "bench_main"
harness = false
