[package]
name = "tsfx"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsfx"
crate-type = ["lib", "cdylib"]

[lints.rust]
# unused = "allow" # For exploratory dev.

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8.19"
pyo3 = "0.22"
chrono = "0.4"
csv = "1.3"
ndarray = "0.15"
ndarray-stats = "0.5"
polars = { version = "=0.43.1", features = [
  "polars-io",
  "lazy",
  "csv",
  "diff",
  "dynamic_group_by",
  "strings",
  "ndarray",
  "streaming",
  "dtype-struct",
  "nightly",
  "regex",
] }
pyo3-polars = { version = "=0.17.0", features = ["lazy", "dtype-struct"] }
linfa = "0.7"
linfa-linear = "0.7"
noisy_float = "0.2"
itertools = "0.13"
ordered-float = "4.2"
num = "0.4"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/html/docs-header.html"]

[[bench]]
name = "bench_main"
harness = false
