[package]
name = "tsfx"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsfx"
crate-type = ["lib", "cdylib"]

[lints.rust]
# unused = "allow" # For exploratory dev.

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"
pyo3 = "0.25"
chrono = "0.4"
csv = "1.3"
ndarray = "0.16"
ndarray-stats = "0.6"
polars = { version = "=0.50.0", features = [
  "polars-io",
  "lazy",
  "csv",
  "diff",
  "dynamic_group_by",
  "strings",
  "ndarray",
  "dtype-struct",
  "dtype-array",
  "nightly",
  "regex",
  "timezones",
  "abs",
] }
pyo3-polars = { version = "=0.23.1", features = ["lazy", "dtype-struct"] }
linfa = "0.8"
linfa-linear = "0.8"
noisy_float = "0.2"
itertools = "0.14"
ordered-float = "5.1"
num = "0.4"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/html/docs-header.html"]

[[bench]]
name = "bench_main"
harness = false
