[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tsfx"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["polars==1.32.0", "pyarrow"]

[project.optional-dependencies]
dev = ["maturin", "ruff", "mypy", "pre-commit", "pytest"]
bench = ["tsfresh", "pandas"]
examples = [
  "plotly",
  "qdrant-client",
  "jupyter",
  "notebook",
  "numpy",
  "scikit-learn",
]
all = ["tsfx[dev,bench,examples]"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"


[tool.mypy]
python_version = "3.11"

# mypy per-module options:

[[tool.mypy.overrides]]
module = "tsfx"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python_tests"]

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
ignore = [
  "N806",
  "ANN101",
  "D203",
  "D107",
  "D105",
  "D100",
  "D213",
  "D104",
  "PD901",
]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "ANN",
  "S",
  "N",
  "SIM",
  "A",
  "ERA",
  "PD",
  "D",
]
unfixable = ["F401", "F841"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "python_tests",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
